# Borger

./: .gitignore  Cargo.toml  README.md  borger  clean.sh  dev.sh  eslint.config.ts  package.json  prettier.config.ts  release.sh  rust-analyzer.toml.example  rust-toolchain.toml  rustfmt.toml  setup.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
client/rs/: Cargo.toml
client/rs/.cargo/: config.mt.toml  config.st.toml
client/rs/src/: lib.rs  presentation_controller.rs
client/ts/src/: compat.ts  console_log.ts  index.ts  net.ts
client/ts/src/handwritten/: mem_wrappers.ts
client/ts/src/networked_types/: networked_types.ts
client/ts/src/networked_types/collections/: slotmap.ts
code_generator/: tsconfig.json
code_generator/src/: common.ts  flatten.ts  main.ts  state_schema.ts
code_generator/src/files/: constructors.ts  diff_des.ts  diff_ser.ts  interpolation.ts  mem_offsets.ts  mem_wrappers.ts  presentation.ts  simulation.ts  snapshot_serdes.ts  untracked.ts
engine/: Cargo.toml
engine/base/: Cargo.toml
engine/base/src/: context.rs  js_bindings.rs  lib.rs  macros.rs  math.rs  misc.rs  multiplayer_tradeoff.rs  networked_types.rs  physics.rs  simulation_controller.rs  thread_comms.rs  tick.rs
engine/base/src/handwritten/: constructors.rs  diff_des.rs  diff_ser.rs  entities.rs  interpolation.rs  presentation_state.rs  simulation_state.rs  snapshot_serdes.rs  untracked.rs
engine/base/src/networked_types/: primitive.rs
engine/base/src/networked_types/collections/: slotmap.rs
engine/base/src/simulation_controller/: client.rs  seek.rs  server.rs
engine/borger/: Cargo.toml
engine/borger/src/: js_bindings.rs  lib.rs  misc.rs  multiplayer_tradeoff.rs  physics.rs  simulation_controller.rs  thread_comms.rs  tick.rs
engine/borger/src/handwritten/: constructors.rs  diff_ser.rs  interpolation.rs  presentation.rs  presentation_state.rs  simulation_state.rs  untracked.rs
engine/borger/src/networked_types/: haptic_prediction.rs  primitive.rs
engine/borger/src/networked_types/collections/: slotmap.rs
engine/borger/src/simulation_controller/: client.rs  seek.rs  server.rs
engine/borger_procmac/: Cargo.toml
engine/borger_procmac/src/: lib.rs
engine/client/rs/: Cargo.toml
engine/client/rs/.cargo/: config.mt.toml  config.st.toml  config.toml
engine/client/rs/src/: lib.rs  presentation_controller.rs
engine/client/ts/src/: Compat.ts  ConsoleLog.ts  InputPoll.ts  Net.ts  PresentationController.ts  Renderer.ts  compat.ts  index.ts  input_poll.ts  net.ts  presentation_controller.ts
engine/client/ts/src/handwritten/: mem_wrappers.ts
engine/client/ts/src/networked_types/: primitive.ts
engine/client/ts/src/networked_types/collections/: slotmap.ts
engine/code_generator/src/: Common.ts  Flatten.ts  Main.ts  StateSchema.ts  common.ts  flatten.ts  main.ts  state_schema.ts
engine/code_generator/src/files/: constructors.ts  diff_des.ts  diff_ser.ts  entities.ts  interpolation.ts  mem_offsets.ts  mem_wrappers.ts  presentation.ts  presentation_state.ts  simulation_state.ts  snapshot_serdes.ts  untracked.ts
engine/server/: Cargo.toml
engine/server/src/: flags.rs  main.rs  net.rs
engine/src/: lib.rs  misc.rs  multiplayer_tradeoff.rs  networked_types.rs  physics.rs  simulation_controller.rs  thread_comms.rs  tick.rs
engine/src/handwritten/: constructors.rs  diff_des.rs  diff_ser.rs  interpolation.rs  presentation.rs  simulation.rs  simulation_state.rs  snapshot_serdes.rs  untracked.rs
engine/src/networked_types/: event_dispatcher.rs  primitive.rs
engine/src/networked_types/collections/: slotmap.rs
engine/src/simulation_controller/: client.rs  seek.rs  server.rs
game/: Cargo.toml  State.ts  index.css  index.html  state.ts  tailwind.config.ts  vite.config.ts
game/assets/: gru.glb
game/presentation/: character.ts  index.ts  input.ts  input_poll.ts
game/presentation/old/: crosshair.ts  entities.ts  pipeline.ts
game/presentation/ui/: buttons.tsx  hud.tsx  index.tsx  nipples.tsx
game/rs/: Cargo.toml
game/rs/src/: lib.rs  presentation.rs  simulation.rs
game/rs/src/presentation/: camera.rs  pipeline.rs
game/rs/src/simulation/: character.rs  input.rs  input_ops.rs  net_events.rs  physics_box.rs  physics_demo.rs  physics_test.rs  physstep.rs  pipeline.rs  server_events.rs
game/simulation/: character.rs  input.rs  lib.rs  server_events.rs
game/simulation/old/: camera.rs  pipeline.rs
game/ts/src/: Index.ts  index.ts
game/ts/src/presentation/scene/: Character.ts  Crosshair.ts  Entities.ts  PhysicsBox.ts  PhysicsDemo.ts  Pipeline.ts  character.ts  crosshair.ts  entities.ts  pipeline.ts
game/ts/src/presentation/ui/: HUD.tsx  HUDHelp.tsx  Index.tsx  buttons.tsx  hud.tsx  index.tsx  nipples.tsx
game/ts/src/simulation/: Input.ts  input.ts
patches/: rolldown-vite@7.3.1.patch  vite@8.0.0-beta.18.patch
procmac/: Cargo.toml
procmac/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  net.rs
