[workspace]
resolver = "2"
members = [
	"engine/borger",
	"game",
	"engine/server",
	"engine/client/rs",
	"engine/borger_procmac"
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
#shared
log = { version = "*", default-features = false }
glam = { version = "0.30.10", default-features = false, features = ["std"] } #match version to rapier
atomicbox = { version = "*", default-features = false }
tokio = { version = "*", default-features = false, features = ["rt"] }
num_enum = { version = "*", default-features = false }
rapier3d = { version = "*", default-features = false, features = ["simd-stable", "dim3", "f32"] } #can't use simd-unstable https://github.com/dimforge/simba/issues/80

#wasm-specific shims (used in borger crate to make client happier)
wasm-bindgen = { version = "*", default-features = false }
wasm_thread = { git = "https://github.com/buttercrab/wasm_thread.git", branch = "patch-1", default-features = false, features = ["es_modules"] } #https://github.com/chemicstry/wasm_thread/pull/33
web-time = { version = "*", default-features = false }

#dev build
[profile.server-dev]
inherits = "dev"
opt-level = 3 #optimize server for speed
[profile.client-dev]
inherits = "dev"
opt-level = "s" #optimize client for size

#release build: even more optimizations
[profile.release]
strip = "symbols" #no more debuggin
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
[profile.server-release]
inherits = "release"
opt-level = 3 #optimize server for speed
[profile.client-release]
inherits = "release"
opt-level = "s" #optimize client for size
