[package]
name = "game_rs"
version.workspace = true
edition.workspace = true

[lib]
path = "simulation/lib.rs"

[features]
server = ["borger/server"]
client = ["borger/client", "js-sys", "web-sys"]

[dependencies]
borger = { path = "../engine/borger" }
log.workspace = true
glam.workspace = true
wasm-bindgen.workspace = true
rapier3d.workspace = true

#client only
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
