[package]
name = "game_rs"
version.workspace = true
edition.workspace = true

[lib]
path = "simulation/lib.rs"

[features]
server = ["borger/server"]
client = ["borger/client"]

[dependencies]
borger = { path = "../engine/borger" }
log.workspace = true
glam.workspace = true
rapier3d.workspace = true
