[package]
name = "base"
version.workspace = true
edition.workspace = true

[features]
server = ["tokio"]
client = ["atomicbox", "js-sys", "web-sys"]

[dependencies]
log.workspace = true
glam.workspace = true
wasm-bindgen.workspace = true
wasm_thread.workspace = true
web-time.workspace = true
num_enum.workspace = true

#server only
tokio = { workspace = true, optional = true }

#client only
atomicbox = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys =  { workspace = true, optional = true }
