[package]
name = "server"
version.workspace = true
edition.workspace = true

[features]
server = ["base/server", "game_rs/server"]
client = []

[dependencies]
base = { path = "../base" }
game_rs = { path = "../../game/rs" }
log.workspace = true
tokio.workspace = true

wtransport = { version = "*", default-features = false, features = ["ring", "self-signed"] }
simple_logger = { version = "*", default-features = false, features = ["colors"] }
clap = { version = "*", default-features = false, features = ["std", "derive", "color", "error-context", "help", "suggestions", "usage"] }
tokio-tungstenite = { version = "*", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio-rustls = { version = "*", default-features = false }
futures-util = { version = "*", default-features = false }
