[package]
name = "server"
version.workspace = true
edition.workspace = true

[features]
server = ["borger/server", "game_rs/server"]

#do not use. this is for nicer rust-analyzer support only
client = ["borger/client", "game_rs/client"]
session_replay = []
singlethreaded = []

[dependencies]
borger = { path = "../borger" }
game_rs = { path = "../../game" }
log.workspace = true
tokio.workspace = true

wtransport = { version = "*", default-features = false, features = ["ring", "self-signed"] }
simple_logger = { version = "*", default-features = false, features = ["colors"] }
clap = { version = "*", default-features = false, features = ["std", "derive", "color", "error-context", "help", "suggestions", "usage"] }
tokio-tungstenite = { version = "*", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio-rustls = { version = "*", default-features = false }
futures-util = { version = "*", default-features = false }
